--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=cliente
-spring.datasource.url=jdbc:postgresql://localhost:5432/DBbanco
+spring.datasource.url=jdbc:postgresql://localhost:5432/DBbanco2
 spring.datasource.username=postgres
 spring.datasource.password=isra123
 spring.jpa.hibernate.ddl-auto=update
